deploy/k8s/pspbalsaas-db-sts-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: pspbalsaas-db-1
  labels:
    app: redis
spec:
  ports:
  - port: 6379
    name: db
  clusterIP: None
  selector:
    app: pspbalsaas
    role: db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pspbalsaas-db
spec:
  serviceName: "pspbalsaas-server"
  replicas: 1
  selector:
    matchLabels:
      app: pspbalsaas
      role: db
  template:
    metadata:
      labels:
        app: pspbalsaas
        role: db
    spec:
      containers:
      - name: pspbalsaas-redis
        image: redis:latest
        ports:
        - containerPort: 6379
          name: db
#        volumeMounts:
#        - name: db
#          mountPath: /var/lib/redis
#  volumeClaimTemplates:
#  - metadata:
#      name: db
#    spec:
#      accessModes: [ "ReadWriteOnce" ]
#      resources:
#        requests:
#          storage: 1Gi
#
